--- a/app/src/main/res/layout/activity_kalender.xml
+++ b/app/src/main/res/layout/activity_kalender.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/info"
         android:layout_width="116dp"
         android:layout_height="44dp"
         android:layout_marginBottom="8dp"
@@ -32,6 +32,7 @@
         android:layout_marginTop="8dp"
         android:background="@color/colorAccent"
         android:text="Info"
+        android:onClick="info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.228"
@@ -40,7 +41,7 @@
         app:layout_constraintVertical_bias="0.946" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/logud"
         android:layout_width="117dp"
         android:layout_height="44dp"
         android:layout_marginBottom="8dp"
@@ -49,6 +50,7 @@
         android:layout_marginTop="8dp"
         android:background="@color/colorAccent"
         android:text="Log ud"
+        android:onClick="Logud"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.76"
