--- a/app/src/main/res/layout/activity_mma.xml
+++ b/app/src/main/res/layout/activity_mma.xml
@@ -7,32 +7,38 @@
     tools:context="com.example.cecil.sense.mma">
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/Morgen"
         android:layout_width="183dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="160dp"
         android:background="@color/colorAccent"
         android:text="Morgen"
+        android:onClick="Morgen"
+        app:layout_constraintBottom_toTopOf="@+id/Middag"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/Middag"
         android:layout_width="183dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorAccent"
         android:text="Middag"
-        app:layout_constraintBottom_toTopOf="@+id/button7"
+        app:layout_constraintBottom_toTopOf="@+id/Aften"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button5"
         tools:text="Middag" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/Aften"
         android:layout_width="181dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -40,21 +46,21 @@
         android:background="@color/colorAccent"
         android:text="Aften"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.648" />
+        app:layout_constraintVertical_bias="0.659" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="212dp"
         android:layout_height="37dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="108dp"
         android:text="Vælg måltid på dagen"
         android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
         app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintHorizontal_bias="0.581"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
